--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
     <link rel="stylesheet" href="assets/style.css">
     <meta name="author" content="kiranbandi">
     <title>UofS MCScanX Synteny Browser</title>
-
 </head>
 
 <body>
     <main class='container'>
-        <h3 class="blue-text text-accent-2 center-align">SynScan : MCScanX Synteny Visualizer Tool</h3>
+        <h3 class="blue-text text-accent-2 center-align">SynVisio : MCScanX Synteny Visualizer Tool</h3>
         <div id='root'></div>
     </main>
     <!--JavaScript at end of body for optimized loading-->
@@ -30,8 +29,8 @@
 <footer class="page-footer">
     <div class="footer-copyright">
         <div class="container">
-            Problems,Suggestions <a class="footer-link" href="mailto:venkat.bandi@usask.ca?subject=MCSCANX Synteny Tool&amp;body=Please%20Fill%20">Contact us</a>
-            <a class="footer-link right" href="http://hci.usask.ca/">University of Saskatchewan HCI Lab</a>
+            <span class="left">Problems, Suggestions <a class="footer-link" href="mailto:venkat.bandi@usask.ca?subject=MCSCANX Synteny Tool&amp;body=Please%20Fill%20">Contact us</a></span>
+            <a class="footer-link right" href="http://hci.usask.ca/"> <img src="assets/images/interaction_lab.gif" height="30"> </a>
         </div>
     </div>
 </footer>
