Rerouted users to SynVisio

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="assets/materialize/js/materialize.min.js"></script>
     <script src="assets/bundle.js"></script>
+    <script>
+    alert("This is an outdated project, Please visit https://synvisio.github.io to use the latest version of this tool.Sorry for the inconvenience.");
+    
+    </script>
 </body>
 <footer class="page-footer">
     <div class="footer-copyright">
